0.49_01 2020-12-11

- set_text issues errors for bad text chunks
- Unify testing of libpng version
- Test setting and getting of tIME chunk
- Documentation work

0.49 2020-12-10

- Allow user to set compression level
- Add set_compression_* and set_text_compression_*
- Support the "lang" and "lang_key" fields of text chunks
- Remove undocumented "language_tag" and "translated_key" for text chunks
- Documentation work
- Skip all iTXt tests for versions of libpng up to 1.6.3

0.48 2020-11-22

- Makefile.PL and printf fixes
- Add ppport.h to distribution

0.47 2020-09-17

- Added "split_alpha"

0.46 2018-09-15

- Change set_rows to copy the data
- Bug fix for Strawberry Perl builds
- Documentation

0.45 2018-01-04

- Provisional support for png_set_compression_level removed
- Documentation of two undocumented functions and a bug
- Documentation of pnginspect

0.44 2017-06-28

- Revert back to old method of detecting libpng, discard Devel::CheckLib

0.43 2016-02-27

- Documents png_compare function
- Documents pnginspect script

0.42 2016-02-18

- Adds "png_compare", a function to compare image data in two PNGs
- Removes reference to mailing list from metadata
- Fixes documentation internal links

0.41 2015-09-26

* Remove broken image, download, and mailing list links from documentation.
* Simplify documentation (excessive headings).

0.40 2015-09-26

* Fixes bug related to use of memory after freeing.

0.39 2014-10-17

* Fixes bugs related to 64 bit systems (ARC)

0.38 2014-08-17

* Compilation guards for various kinds of libpng.
* More tests for libpng support in libpng_supports.

0.37 2014-04-27

* Fixup for too-modern test (used s///r flag)
* "get_IHDR" no longer returns "compression_method" and
  "filter_method" (always 0)
* Some documentation cleanup.

0.36 2014-04-26

* Implements get_sBIT, set_sBIT (previously incorrectly implemented)
* Implements get_tRNS, set_tRNS (previously unimplemented)