@@ -32,6 +32,7 @@ my %wm = (
         },
         no_index => {
             directory => ['tmpl', 'build', 'inc'],
+	    file => ['t/IPNGLT.pm'],
         },
 	x_contributors => [
 	    'Greg Kennedy <gregk@cpan.org>',
