@@ -2,8 +2,9 @@
 
 - set_text issues errors for bad text chunks
 - Unify testing of libpng version
-- Test setting and getting of tIME chunk
+- Better tests of setting and getting of tIME chunk
 - Documentation work
+- Tests for pCAL chunk (was untested)
 
 0.49 2020-12-10
 
